# rust-crud-api

./: .env.example  Cargo.toml  Readme.md  Rocket.toml  diesel.toml
migrations/2025-05-23-060232_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
