[package]
name = "rusty"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_mysql_pool"] }
diesel = { version = "2.1", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-config = "1"
aws-sdk-s3 = "1"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"